--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,4 +1,9 @@
-<table mat-table [dataSource]="courses" class="mat-elevation-z8">
+<div class="container">
+<mat-card appearance="outlined" class="card">
+  <mat-toolbar class="toolbar">
+    <span>Cursos</span>
+  </mat-toolbar>
+<table mat-table [dataSource]="courses" class="mat-elevation-z8 table">
 
   <!-- Name Column -->
   <ng-container matColumnDef="name">
@@ -15,3 +20,5 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</mat-card>
+</div>
