feat(app-material): Organizando os imports dentro de um modulo

--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 <mat-card appearance="outlined" class="card">
-  <mat-toolbar class="toolbar">
+  <mat-toolbar class="toolbar __center">
     <span>Cursos</span>
   </mat-toolbar>
 <table mat-table [dataSource]="courses" class="mat-elevation-z8 table">
